# rpomo

./: Cargo.toml  README.md
.github/workflows/: dry_run.yml  release.yml
src/: loop_questions.rs  main.rs  notfication.rs  questions.rs
